--- a/sass/about/_about.scss
+++ b/sass/about/_about.scss
@@ -32,7 +32,8 @@
         right: 0;
         width: 50%;
         padding: 100px 0 0 100px;  
-        margin-top: 0;  
+        margin-top: 0;
+        text-align: start;
     }
 
     .about__info__heading {
